@@ -57,52 +57,7 @@
 <p>The Windows version is distributed via the Website &lt;<a href="http://www.xhtml2pdf.com">http://www.xhtml2pdf.com</a>&gt; in the &quot;Download&quot; section.</p>
 <h1>Command line</h1>
 <p>If you do not want to integrate <em>pisa</em> in your own application, you may use the command line tool that gives you a simple interface to the features of <em>pisa</em>. Just call <code>xhtml2pdf --help</code> to get the following help informations:</p>
-<!--HELP--><pre>pisa 3.0.30 (Build 2008-12-01)
-(C) 2002-2008 Dirk Holtwick &lt;dirk.holtwick@gmail.com&gt;, Germany
-Website http://www.htmltopdf.org
-
-USAGE: pisa [options] SRC [DEST]
-
-SRC
-  Name of a HTML file or a file pattern using * placeholder.
-  If you want to read from stdin use &quot;-&quot; as file name.
-  You may also load an URL over HTTP. Take care of putting
-  the &lt;src&gt; in quotes if it contains characters like &quot;?&quot;. 
-
-DEST
-  Name of the generated PDF file or &quot;-&quot; if you like
-  to send the result to stdout. Take care that the
-  destination file is not alread opened by an other
-  application like the Adobe Reader. If the destination is
-  not writeable a similar name will be calculated automatically.
-
-[options]
-  --css, -c:
-    Path to default CSS file
-  --css-dump:
-    Dumps the default CSS definitions to STDOUT
-  --debug, -d:
-    Show debugging informations
-  --encoding:
-    the character encoding of SRC. If left empty (default) this 
-    information will be extracted from the HTML header data         
-  --help, -h:
-    Show this help text
-  --quiet, -q:
-    Show no messages
-  --start-viewer, -s:
-    Start PDF default viewer on Windows and MacOSX
-    (e.g. AcrobatReader)
-  --version:
-    Show version information 
-  --warn, -w:
-    Show warnings
-  --xml, --xhtml, -x:
-    Force parsing in XML Mode 
-    (automatically used if file ends with &quot;.xml&quot;)
-  --html:
-    Force parsing in HTML Mode (default)
-</pre><!--HELP-->
+<!--HELP--><pre></pre><!--HELP-->
 <h2>Converting HTML data </h2>
 <p>To generate a PDF from an HTML file called <code>test.html</code> call:</p>
 <pre>$ xhtml2pdf -s test.html</pre>
